fixed modal z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -433,7 +433,7 @@ footer {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     left: 0;
     top: 0;
     width: 100%;
